# pokemon-gen1-save-game-tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: check_size.hpp  constans.hpp  mem_manipulation.hpp  traits.h  traits.hpp  types.hpp
src/memory/: sram.hpp  sram_bank0.hpp  sram_bank1.hpp  sram_bank1_main_data.hpp  sram_bank34.hpp
src/types/: bitarray.cpp  bitarray.hpp  coordinate.hpp  hall_of_fame.hpp  item.hpp  movement.hpp  name.hpp  pokedex.hpp  pokemon.hpp  string.cpp  string.hpp  uint_BE.hpp  uint_LE.hpp
